# ctc-filter

./: Makefile  READEME.MD  main.py  pyproject.toml
notebook/: YGG-USDT-SWAP-1H.json  divergence.ipynb  swap_tickers.json  take_profits.ipynb  take_profits_bak.ipynb  test.ipynb  turbo.ipynb
src/ctc_filter/: app.py  cli.py  config.py  executor.py  filter.py
src/ctc_filter/data_source/: data_source.py
src/ctc_filter/downloader/: _okx.py  downloader.py
src/ctc_filter/user_data/: .env.example
src/ctc_filter/user_data/filters/: sample.py
src/ctc_filter/user_data/rules/: sample.py
