[project]
name = "ctc-filter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "mkdir700", email = "mkdir700@gmail.com" }]
dependencies = [
  "python-okx>=0.2.9",
  "python-dotenv>=1.0.1",
  "TA-Lib>=0.4.29",
  "pandas>=2.2.2",
  "typer>=0.12.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
ctc-filter = "ctc_filter.cli:app"


[tool.pdm]
distribution = false
